<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFEBF9"
    android:orientation="vertical"
    tools:context="com.iuce.diaryandroidproject2.ListDiaryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rowMargin"
                android:fontFamily="@string/font"
                android:gravity="center"
                android:text="@string/txtlistID"
                android:textColor="#ff0000"
                android:textSize="@dimen/checkLeftSol"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtKansekeri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rowMargin"
                android:fontFamily="@string/font"
                android:gravity="center"
                android:text="@string/txtlistKansekeri"
                android:textColor="#ff0000"
                android:textSize="@dimen/checkLeftSol"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtInsulinmiktari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rowMargin"
                android:fontFamily="@string/font"
                android:gravity="center"
                android:text="@string/txtlistInsulinmitari"
                android:textColor="#ff0000"
                android:textSize="@dimen/checkLeftSol"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center" >

            <TextView
                android:id="@+id/txtTarih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rowMargin"
                android:fontFamily="@string/font"
                android:gravity="center"
                android:text="@string/txtlistTarih"
                android:textColor="#ff0000"
                android:textSize="@dimen/checkLeftSol"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listInsulin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>